feat: добавлены сущности, контролеры, репозитории, сервисы. добавлена авторизация

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,21 @@
 spring.application.name=pdm-system
 
 server.port=8080
-spring.h2.console.enabled=true
-## default path: h2-console
-#
-spring.datasource.url=jdbc:h2:mem:./testdb
+# Datasource
+spring.datasource.url=jdbc:h2:mem:./pdmdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=qq
+# JPA
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+# ??????? Spring Security
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
+# CSRF
+spring.security.csrf.enabled=true
