feat: добавлены классы и страницы для взаимодействия с проектами

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
 # CSRF
 spring.security.csrf.enabled=true
+
+# ???? ??? ????????
+path.prefix.server=D:/share/projects/
+path.prefix.client=E:/projects/
