--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,9 @@ spring.datasource.username=sa
 spring.datasource.password=qq
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
 # H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
