--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,5 +23,5 @@ logging.level.org.springframework.web=DEBUG
 spring.security.csrf.enabled=true
 
 # ???? ??? ????????
-path.prefix.server=D:/share/projects/
-path.prefix.client=E:/projects/
+path.prefix.server=D:\\\\
+path.prefix.client=W:\\\\
