feat: доработаны наименования файлов на сервере и клиенте

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,5 +23,5 @@ logging.level.org.springframework.web=DEBUG
 spring.security.csrf.enabled=true
 
 # ???? ??? ????????
-path.prefix.server=D:\\\\
+path.prefix.server=C:\\\\
 path.prefix.client=W:\\\\
