feat: изменена версия java

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=pdm-system
 
 server.port=8080
 # Datasource
-spring.datasource.url=jdbc:h2:mem:./pdmdb
+spring.datasource.url=jdbc:h2:file:./pdmdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=qq
