--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=pdm-system
 
-server.port=8080
+server.port=85
+
+spring.devtools.restart.enabled=false
 # Datasource
 spring.datasource.url=jdbc:h2:file:./pdmdb
 spring.datasource.driverClassName=org.h2.Driver
@@ -15,7 +17,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=false
+spring.h2.console.settings.web-allow-others=true
 # ??????? Spring Security
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
